# vigilant-palm-tree

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
.cargo/.github/workflows/: general.yml
.github/: dependabot.yml
.github/workflows/: general.yml
.sqlx/: query-10868f116c3613d83343ae67e26a5b522f80f6e61a43db0fc3b23e2d8bd26a59.json  query-77d828e7d2eb85cf4c686b4a111d3e6bda35fa1ee2af4ed2b1a1c2398d8875af.json  query-f8cc688e8671a44b1ad562ce1c7c7aab60c9e130cee7a1b69f80a53bbc6a0692.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250129143003_rename_password_column.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs
