[package]
name = "zero2prod"
version = "0.1.1"
edition = "2021"

[profile.release]
strip = "debuginfo"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1", features = ["derive"] }
config = "0.15.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"
claims = "0.8.0"
validator = "0.20.0"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1.0.95"
thiserror = "2"
base64 = "0.22"
argon2 = { version = "0.5", features = ["std"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.reqwest]
version = "0.12"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
fake = "3.1"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"